# geneweaver-aon

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  agr-normalizer_summary.md  pyproject.toml  skaffold.yaml
.github/workflows/: _check-coverage-action.yml  coverage.yml  pull_requests.yml  release.yml
agr-normalizer/: app.py  requirements.txt
agr-normalizer/alembic/versions/: 4297df5638d7_first_commit.py
agr-normalizer/src/: add_missing_info.py  cli.py  config.py  controller.py  database.py  factory.py  fill_missing_species_information.py  healthcheck.py  service.py  wsgi.py
agr-normalizer/tests/: test_endpoints.py
deploy/: .dockerignore  Dockerfile  README.md  cloudbuild.yaml  entrypoint.sh  skaffold.yaml
deploy/k8s/base/: configmap.yaml  deployment.yaml  kustomization.yaml  service.yaml  temporal_worker.yaml
deploy/k8s/overlays/jax-cluster-dev-10--dev/: configmap.yaml  ingress.yaml  kustomization.yaml
deploy/k8s/overlays/jax-cluster-dev-10--sqa/: configmap.yaml  (+2 more)
deploy/tests/: command_tests.yaml  metadata_tests.yaml
flask/: alembic.ini  app.py  requirements.txt
flask/alembic/: env.py
flask/alembic/versions/: 3a8c36f0d3f6_create_geneweaver_tables.py  4297df5638d7_first_commit.py  bc972ff277e3_add_id_column.py
flask/migration/: geneweaver_genedb.sql  geneweaver_species.sql
flask/migration/public_tables/: algorithm.sql  species.sql
flask/src/: auth.py  config.py  controller.py  database.py  factory.py  models.py  service.py
flask/tests/: test_endpoints.py
flask/tests/results/: AllAlgorithms.json  GenePrefix.json  GeneSpecies.json  OrthoBestFrom.json  OrthoBestFromTo.json  OrthoFrom.json  OrthoID.json  OrthoTo.json  OrthoToFrom.json  OrthologBestFromTo.json  OrthologTo.json  OrthologToAndFrom.json  OrthologToFromSpeciesAlgorithm.json  SpeciesList.json
src/geneweaver/aon/: __init__.py  add_missing_info.py  api.py  app.py  auth.py  cli.py  config.py  controller.py  database.py  database_initialization.ipynb  dependencies.py  enum.py  exceptions.py  factory.py  fill_missing_species_information.py  models.py  service.py  utils.py  wsgi.py
tests/: __init__.py  test_endpoints.py
(+57 files in other folders)
