[tool.poetry]
name = "geneweaver-aon"
version = "0.1.0"
description = ""
authors = ["Sophie Kearney <sophie_kearney1@baylor.edu>", "Alexander Berger <alexander.berger@jax.org>"]
readme = "README.md"
license = "Apache-2.0"
homepage = "https://thejacksonlaboratory.github.io/geneweaver-docs/"
repository = "https://github.com/TheJacksonLaboratory/geneweaver-aon"
packages = [
    { from = "src", include = "geneweaver/aon" }
]

[tool.poetry.dependencies]
python = "^3.9"
flask = "2.2.2"
flask-cors = "3.0.10"
flask-restx = "1.0.5"
sqlalchemy = "1.4.46"
alembic = "1.9.2"
requests = "2.28.2"
python-jose = "3.3.0"
click = "8.1.3"
environs = "9.5.0"
psycopg2-binary = "2.9.5"


[tool.poetry.group.dev.dependencies]
geneweaver-testing = "^0.0.3"
xmlrunner = "1.7.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
